--- a/packages/react/src/internal/components/UnderlineTabbedInterface.module.css
+++ b/packages/react/src/internal/components/UnderlineTabbedInterface.module.css
@@ -25,7 +25,7 @@
 
     .UnderlineItemList {
       flex-wrap: wrap;
-      overflow: hidden;
+      flex: 1;
     }
   }
 }
